--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>Paytm</title>
+    <title>钉钉开放平台</title>
     <style>
         body,div,h1,p{
           margin: 0px;
