--- a/template/html/index.html
+++ b/template/html/index.html
@@ -19,7 +19,11 @@
     </style>
   </head>
   <body>
+    <link rel="stylesheet" href="./static/css/vue-bundle.css">
     <div id="root"></div>
+    <script src="./static/js/manifest.js" charset="utf-8"></script>
+    <script src="./static/js/vendor.js" charset="utf-8"></script>
+    <script src="./static/js/vue-bundle.js" charset="utf-8"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
